registry/deployment.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: docker-registry
  labels:
    app: docker-registry
spec:
  replicas: 1
  template:
    metadata:
      name: docker-registry
      labels:
        app: docker-registry
    spec:
      containers:
      - name: registry
        image: registry:2
        volumeMounts:
        - mountPath: /data
          name: registry-data
        - mountPath: /tls
          name: registry-tls
        ports:
        - containerPort: 5000
          protocol: TCP
          name: registry

      volumes:
      - name: registry-tls
        secret:
          secretName: registry-tls
      - name: registry-data
        persistentVolumeClaim:
          claimName: docker-registry

# vim: et:ts=2:sw=2
