registry/docker-auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-auth
spec:
  type: ClusterIP
  clusterIP: 172.28.114.20
  selector:
    app: docker-auth
  ports:
  - name: registry-auth
    protocol: TCP
    port: 443
    targetPort: registry-auth

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-auth
  labels:
    app: docker-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-auth
  template:
    metadata:
      labels:
        app: docker-auth
    spec:
      containers:
      - name: docker-auth
        image: cesanta/docker_auth:1.3
        args: ["--v=2", "--alsologtostderr", "/config/auth_config.yml"]
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /pki
          name: pki
        ports:
        - containerPort: 5001
          protocol: TCP
          name: registry-auth

      volumes:
      - name: config
        configMap:
          name: docker-auth-config
      - name: pki
        secret:
          secretName: docker-auth

# vim: et:ts=2:sw=2
