registry/registry.yaml

apiVersion: v1
kind: Service
metadata:
  name: docker-registry
spec:
  type: ClusterIP
  selector:
    app: docker-registry
  ports:
  - name: registry-ssl
    protocol: TCP
    port: 443
    targetPort: registry

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  labels:
    app: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
      - name: registry
        image: registry:2
        volumeMounts:
        - mountPath: /data
          name: registry-data
        - mountPath: /tls
          name: registry-tls
        - mountPath: /tls-auth
          name: auth-tls
        ports:
        - containerPort: 5000
          protocol: TCP
          name: registry

      volumes:
      - name: registry-tls
        secret:
          secretName: docker-registry
      - name: auth-tls
        configMap:
          name: docker-auth-bundle
      - name: registry-data
        persistentVolumeClaim:
          claimName: docker-registry

# vim: et:ts=2:sw=2
