registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
spec:
  type: ClusterIP
  selector:
    app: docker-registry
  ports:
  - name: registry-ssl
    protocol: TCP
    port: 443
    targetPort: registry-ssl

# vim: et:ts=2:sw=2
